// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Fetcher children> should render a child 1`] = `
<div>
  Children
</div>
`;

exports[`<Fetcher children> should render a function 1`] = `
<div>
  Children Function
</div>
`;

exports[`<Fetcher component> should render 1`] = `
<div>
  Component
</div>
`;

exports[`<Fetcher render> should render 1`] = `
<div>
  Render
</div>
`;
